Working on leaf blower fixing code and adding sound